--- a/styles/sass/Home.module.sass
+++ b/styles/sass/Home.module.sass
@@ -4,6 +4,7 @@
 .home
     padding-top: 100px
     @include mixins.align-center(row)
+    background-size: 600px
     @include mixins.responsivo-900
         @include mixins.align-center(column)
     .foto
