--- a/styles/sass/_variables.sass
+++ b/styles/sass/_variables.sass
@@ -9,3 +9,6 @@ $contato-color: rgb(255, 255, 255)
 $errorMessage-color: rgb(255, 255, 255)
 $red-color: rgb(255, 0, 0)
 $pink-color: rgb(224, 0, 168)
+$ui: 80%
+$responsividade: 85%
+$frameworks: 70%
