--- a/styles/sass/_mixins.sass
+++ b/styles/sass/_mixins.sass
@@ -4,6 +4,18 @@
     justify-content: center
     align-items: center
 
+@mixin responsivo-1500
+    @media (max-width: 1500px)
+        @content
+
+@mixin responsivo-1300
+    @media (max-width: 1300px)
+        @content
+
+@mixin responsivo-1100
+    @media (max-width: 1100px)
+        @content
+
 @mixin responsivo-900
     @media (max-width: 900px)
         @content
