--- a/styles/sass/_mixins.sass
+++ b/styles/sass/_mixins.sass
@@ -24,6 +24,10 @@
     @media (max-width: 800px)
         @content
 
+@mixin responsivo-700
+    @media (max-width: 700px)
+        @content
+
 @mixin responsivo-600
     @media (max-width: 600px)
         @content
